# ResNet-PyTorch

./: LICENSE  README.md  cifar10.ipynb  main.py  pyproject.toml
resnet_pytorch/: __init__.py  augmentaions.py  data.py  models.py  resnet.py  utils.py
