[tool.poetry]
name = "resnet-pytorch"
version = "0.1.0"
description = ""
authors = ["Dima Kagan <dimakagan15@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.1.2"
torchvision = "^0.16.2"
tqdm = "^4.66.1"
numpy = "^1.26.2"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
